Fix plotsegment properties alignment

--- a/sass/components/canvas/attribute_editor.scss
+++ b/sass/components/canvas/attribute_editor.scss
@@ -563,7 +563,7 @@
 
       .el-layout-item {
         &:not(:last-child) {
-          margin-right: 0px;
+          margin-right: 2px;
         }
       }
 
